--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ title                    : "Your Name / Site Title"
 title_separator          : "-"
 name                     : &name "Shihang Bi"
 description              : &description "personal description"
-url                      : https://shengxiaotanlige.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://Shihang.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
 
